--- a/rbac/control/templates/login.html
+++ b/rbac/control/templates/login.html
@@ -5,7 +5,7 @@
         <TITLE>login</TITLE>
     </HEAD>
     <body>
-        <form action="" method="POST">
+        <form action="/control/login" method="POST">
             username: <input type="text" name="username"> <br>
             password: <input type="PASSWORD" name="pwd"> <br>
             <input type="submit" value="submit">
